option optimize_for = LITE_RUNTIME;

package orwell.com;

// Ask how the player should connect to the game server
// answered by: Access
message GetAccess {
	optional string name = 1;
}

// Ask the current state of the game
// answered by: GameState
message GetGameState {
}

